[package]
name = "sniff"
description = "A simple IP Address sniffer tool written in Rust"
version = "0.0.2"
edition = "2021"
authors = ["André Filipe Barranco <b.andrefilipe@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
progress_bar = "0.1.3"
