[package]
name = "sniff"
description = "A simple IP Address sniffer tool written in Rust"
version = "0.1.0"
edition = "2021"
authors = ["André Filipe Barranco <b.andrefilipe@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
progress_bar = "1.0.5"
